adding database deps and readding .env file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,6 @@ spring:
     name: users
 
   config:
-    import: configserver:http://localhost:8888
+    import:
+      - file:../.env[.properties]
+      - configserver:http://localhost:8888
