--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,10 @@
 			<artifactId>minio</artifactId>
 			<version>8.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
