--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,12 @@
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-admin-client</artifactId>
-			<version>25.0.5</version>
+			<version>25.0.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-core</artifactId>
+			<version>25.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
